# minecone2

./: Cargo.toml
res/textures/dirt/: dirt-face-no-pebbles.xcf  dirt-face.xcf  dirt-old.xcf  dirt.xcf
res/textures/grass/: grass.xcf
res/textures/rocky-dirt/: rocky-dirt-face.xcf  rocky-dirt.xcf
res/textures/stone/: stone-face-final.xcf  stone-face-no-noise.xcf  stone-face-recolored-1.xcf  stone-face-recolored-2.xcf  stone-face-recolored-3.xcf  stone-face.xcf  stone.xcf  stone2.xcf  stone_orig.xcf  stone_orig_face.xcf
src/: assets.rs  main.rs  prelude.rs
src/game/: chunk.rs  mod.rs  parallel.rs  player.rs  render_zone.rs  types.rs  world.rs
src/game/block/: air.rs  dirt.rs  grass.rs  mod.rs  rocky_dirt.rs  stone.rs  test_block.rs  texmanip.rs
src/game/client/: camera_controller.rs  mod.rs
src/game/entity/: mod.rs  player.rs
src/game/ui/: debug_window.rs  mod.rs
src/game/worldgen/: biome.rs  mod.rs  surface_biome.rs
src/math/: mod.rs  plane.rs
src/render/: bounding_box.rs  camera.rs  mod.rs  model.rs  shader.wgsl  texture.rs
