[package]
name = "minecone2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
anyhow = { version = "1.0.59", features = [ "backtrace" ] }
wgpu = "0.13.1"
winit = "0.26.1"
pollster = "0.2.5"
glam = "0.21.3"
bytemuck = { version = "1.11.0", features = [ "derive" ] }
image = { version = "0.24.3", default-features = false, features = [ "png", "jpeg" ] }
rustc-hash = "1.1.0"
parking_lot = { version = "0.12.1", features = [ "nightly", "hardware-lock-elision" ] }
dashmap = "5.3.4"
derive_more = "0.99.17"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
array-init = "2.0.1"
enum_dispatch = "0.3.8"
noise = "0.7.0"
statrs = "0.15.0"